--- a/services.html
+++ b/services.html
@@ -279,7 +279,7 @@
 								</a>
 							</li>
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./body-protection.html">
 									<span>Защитные погрытия</span>
 								</a>
 							</li>
@@ -608,7 +608,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Защитные покрытия</a>
+									<a class="footer-svc-links__link" href="./body-protection.html">Защитные покрытия</a>
 								</li>
 
 								<li class="footer-svc-links__item">
