--- a/tire-studding.html
+++ b/tire-studding.html
@@ -835,7 +835,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Защитные покрытия</a>
+									<a class="footer-svc-links__link" href="./body-protection.html">Защитные покрытия</a>
 								</li>
 
 								<li class="footer-svc-links__item">
